# apex

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENT.md  AGENTS.md  Makefile  README.md  SOLVERS.md  VALIDATORS.md  miner.py  pyproject.toml  run.sh  setup.sh  setup_summary.md  uid_tracker.sqlite  validator.py
.github/workflows/: python-package.yml
apex/: __init__.py
apex/common/: async_chain.py  config.py  constants.py  epistula.py  models.py  utils.py  utils_similarity.py
apex/data/: combined_vocab.txt
apex/validator/: __init__.py  auto_update.py  generate_query.py  generate_reference.py  logger_apex.py  logger_db.py  logger_local.py  logger_wandb.py  miner_sampler.py  miner_scorer.py  pipeline.py  weight_syncer.py
compute_horde/: Dockerfile  app.py  requirements.txt  schema.py
config/: mainnet.yaml.example  testnet.yaml.example
containerization_job/: Dockerfile  vllm_llm.py
containerized_job/: Dockerfile  app.py  build.sh  download_model.py  requirements.txt  schema.py
docs/: API_docs.md  competition-externalization-design.md  competition-externalization-phase-1-test-plan.md  incentive-mechanism.md  miner.md  sandbox-startup-config.md  stream_miner_template.md  testing_and_coverage.md
docs/phase-2/: README.md  battleship-legacy-deletion.patch
docs/phase-3/: README.md  layer2-screen-executor-design.md
gpu_container/: Dockerfile  README.md  app.py  decorators.py  docker-compose.yml  requirements.txt
gpu_container/embeddings/: lifespan.py  router.py
gpu_container/health/: __init__.py  router.py
gpu_container/vllm/: lifespan.py  reproducible_vllm.py  router.py
neurons/: validator.py
prompting/: __init__.py
prompting/api/: api.py
prompting/datasets/: random_website.py  sn13.py
prompting/llms/: model_manager.py  model_zoo.py  utils.py  vllm_image.py  vllm_llm.py
prompting/miner_availability/: miner_availability.py
prompting/rewards/: MSRv2_reward.py  exact_match.py  inference_reward_model.py  msrv2_reward.py  (+5 more)
scripts/: autoupdater.py  autoupdater_pm2.sh  check_diff_coverage.sh  check_diff_coverage.sh.backup  install.sh  manage_container.sh  start_autoupdater_pm2.sh  start_validator.py  test_api_empty_responses.py  test_api_load.py  test_coverage.sh
shared/: base.py  constants.py  docker_utils.py  epistula.py  exceptions.py  misc.py  settings.py  uids.py
shared/common/: pyproject.toml
shared/common/src/common/: settings.py
shared/common/src/common/models/: api_models.py  error_models.py  sandbox.py
shared/common/src/common/models/api/: code.py  competition.py  competition_details.py  error_models.py  file.py  job.py  leaderboard.py  miner_profile.py  previous_round_files.py  ranks.py  submission.py  submission_rank.py  tournament.py
shared/common/src/common/utils/: epistula.py  exceptions.py  spec_version.py  string_utils.py
shared/common/tests/: test_hello_world.py
shared/competition/: pyproject.toml
shared/competition/scripts/: get_previous_round_input_files.py
shared/competition/src/competition/aurelius_steering/: README.md
shared/competition/src/competition/aurelius_steering/scripts/: baseline_birthday.safetensors  baseline_hedging.safetensors  baseline_medical.safetensors  baseline_positive.safetensors  example_submission_generator.py  random_birthday.safetensors  random_hedging.safetensors  random_medical.safetensors  random_positive.safetensors
shared/competition/src/competition/battleship/: baseline.py  battleship.py
shared/competition/src/competition/battleship/dockerfiles/: Dockerfile  requirements.txt
shared/competition/src/competition/energy_arbitrage/dockerfiles/: Dockerfile
shared/competition/src/competition/energy_arbitrage/rust/eval/src/: lib.rs
shared/competition/src/competition/iota_simulator/: README.md  baseline.py  models.py
shared/competition/src/competition/iota_simulator/dockerfiles/: Dockerfile  requirements.txt
shared/competition/src/competition/matrix_compression/: README.md  baseline.py  devsetup.sh  miner_solution.py
shared/competition/src/competition/matrix_compression/dockerfiles/: requirements.txt
shared/competition/src/competition/rl_battleship/: launch_battleship_rl.py  rl_baseline.py
shared/competition/src/competition/rl_battleship/dockerfiles/: Dockerfile  requirements.txt
shared/competition/src/competition/rl_battleship/train/: README.md  agent.py  env.py  main.py  pyproject.toml  state_encoder.py  test_model.py  train.py
shared/competition/src/competition/text_clustering/: README.md  baseline.py
shared/competition/src/competition/text_clustering/dockerfiles/: Dockerfile  requirements.txt
shared/competition/src/competition/tron/: README.md  convert_to_onnx.py  launch_tron_rl.py  play_vs_model.py  run_local_duel.py  tron.py
shared/competition/src/competition/tron/dockerfiles/: Dockerfile  requirements.txt
shared/competition/src/competition/tron/train/: README.md  env.py  requirements.txt  train.py
src/cli/: README.md  pyproject.toml  version.py
src/cli/src/cli/: app.py
src/cli/src/cli/commands/: competitions.py  dashboard.py  docs.py  link.py  list_submissions.py  result.py  submit.py  version.py
src/cli/src/cli/dashboard/: app.py  art.py  time_utils.py  utils.py  widgets.py
src/cli/src/cli/dashboard/modals/: alert_modal.py  confirm_modal.py  loading_modal.py
src/cli/src/cli/dashboard/screens/: competition_detail_screen.py  competitions_screen.py  confirm_modal.py  input_modal.py  submission_detail_screen.py
src/cli/src/cli/dashboard/widgets/: battleship.py  download.py  round_details.py
src/cli/src/cli/utils/: client.py  config.py  interface.py  io.py  payment.py  wallet.py
src/validator/: README.md  main.py  pyproject.toml
src/validator/scripts/: launch_validator.sh
src/validator/src/validator/: bt_utils.py  settings.py  validator.py  validator_api_client.py  validator_health.py
validator_api/: api.py  api_management.py  chat_completion.py  gpt_endpoints.py  job_store.py  mixture_of_miners.py  scoring_queue.py  serializers.py  test_time_inference.py  utils.py  validator_forwarding.py  web_retrieval.py
(+45 files in other folders)
