[project]
name = "apex"
version = "4.0.27"
description = "Apex"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
common = { workspace = true }
competition = { workspace = true }
cli = { workspace = true }
validator = { workspace = true }

[tool.uv.workspace]
members = ["shared/*", "src/*"]

[tool.uv]
package = false
