[project]
name = "cli"
version = "4.0.24"
description = "Apex CLI"
authors = [{ name = "Macrocosmos.ai" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "common",
    "competition",
    "httpx>=0.27.0",
    "inquirer>=3.4.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "textual>=6.4.0",
    "typer>=0.20.0",
]

[project.scripts]
apex = "cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }
competition = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
